--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.14.0",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -23,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject","deploy": "gh-pages -d build",
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
     "predeploy": "npm run build"
   },
   "eslintConfig": {
@@ -43,6 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "https://LEEHYUNGSU.github.io/reactRPGgame"
+    "homepage": "https://LEEHYUNGSU.github.io/reactgame/"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
